# Zia

./: CMakeLists.txt  README.md  RFC documentation Zia.txt  conanfile.txt  configServerZia.json  date.php  index.php  main.cpp  test.php
Config/include/: Config.hpp  ConfigHandler.hpp  Module.hpp
Config/src/: Config.cpp  ConfigHandler.cpp  Module.cpp
Server/ThreadPool/include/: CondVar.hpp  Mutex.hpp  ThreadPool.hpp  Threads.hpp
Server/ThreadPool/interfaces/: ICondVar.hpp  IMutex.hpp  IThreads.hpp
Server/ThreadPool/src/: CondVar.cpp  Mutex.cpp  ThreadPool.cpp  Threads.cpp
Server/include/: ClientHTTP.hpp  ClientHTTPS.hpp  ConnexionHTTP.hpp  ConnexionHTTPS.hpp  DLLoader.hpp  Request.hpp  RequestHandler.hpp  RequestList.hpp  RequestParser.hpp  Response.hpp  ResponseCodes.hpp  Server.hpp
Server/interfaces/: IClient.hpp  IConnexion.hpp  IModule.hpp
Server/modules/PhpModule/: PhpModule.cpp  PhpModule.hpp
Server/src/: ClientHTTP.cpp  ClientHTTPS.cpp  ConnexionHTTP.cpp  ConnexionHTTPS.cpp  RequestHandler.cpp  RequestList.cpp  RequestParser.cpp  Server.cpp
Test_Unitaire/: Config.cpp  Core.cpp  Php.cpp  Security.cpp  testUnitaire.cpp  testUnitaire.hpp
Test_Unitaire/fileTest/: response_test_php  test.php
class_diagram/: zia-config-class-diagram.html  zia-phpmodule-class-diagram.html  zia-server-class-diagram.html  zia-server-threads-diagram.html
